# radar-data-availability

./: .gitignore  CLAUDE.md  README.md  coastal_survey_gaps.py  index.html  plot_bedmap_availability.py  plot_combined_availability.py  plot_opr_availability.py  plot_survey_density.py  pyproject.toml  run_coastal_sweep.py
.github/workflows/: generate-figures.yml
claude_plans/: 20260512-repeat-flight-tracks-viz.md
repeat_pass_map/: README.md  extract_altitudes.py  match_flights.py  viewer.py
