[project]
name = "data-availability-figure"
version = "0.1.0"
description = "Radar data availability and survey density figures for xOPR and BedMap"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "duckdb",
    "shapely",
    "geopandas",
    "pyproj",
    "cartopy",
    "rioxarray",
    "rasterio",
    "xopr>=0.5",
    "scipy>=1.17.1",
    "bokeh>=3.9.0",
    "holoviews>=1.22.1",
    "panel>=1.8.10",
    "geoviews>=1.15.1",
    "watchfiles>=1.1.1",
]

[tool.uv.sources]
xopr = { git = "https://github.com/englacial/xopr.git" }
